io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/legalstaticinitialization1/C.java
package io.hotmoka.examples.errors.legalstaticinitialization1;

public class C {
	public final static int i = 13; // legal with final
}